# fin-doc-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  analyst.py  orchestrator.py  search.py
app/api/: __init__.py  admin.py  ask.py  audit.py  benchmark.py  deps.py  evaluate.py  ingest.py
app/db/: __init__.py  engine.py  models.py
app/models/: __init__.py  requests.py  responses.py
app/services/: __init__.py  auth.py  chunker.py  embedder.py  eval_metrics.py  eval_runner.py  llm.py  parser.py  pricing.py  rate_limiter.py  vectorstore.py
app/workers/: __init__.py  celery_app.py  tasks.py
data/eval/golden_datasets/: default.json
docs/: BENCHMARKS.md  CODE_REVIEW.md  PLAN.md
docs/benchmark-runs/: 2026-02-22-dashscope-singapore-qwen.md
scripts/: demo.sh  generate_sample_pdf.py  init-db.sql
tests/: test_agents.py  test_auth.py  test_benchmark.py  test_chunker.py  test_vectorstore.py
tests/eval/: test_eval_metrics.py  test_eval_runner.py  test_golden_dataset.py
